# crane

./: .gitignore  LICENSE  README.md
crane/: CMakeLists.txt  package.xml
crane_controllers/: CMakeLists.txt  crane_controllers_nodelet.xml  crane_controllers_plugin.xml  package.xml  setup.py
crane_controllers/data/: L.mat  datain.pickle  dataout.pickle  dot_wx.mat  dot_wy.mat  gamma.mat  gx.mat  gy.mat  k.mat  last_g.mat  last_gopt.mat  loadmat.py  t.mat  z.mat  zref.mat
crane_controllers/include/crane_controllers/: crane_controller.h  crane_state_controller.h  crane_tip_velocity_controller.h  crane_tip_velocity_forward_controller.h  crane_tip_velocity_rml_controller.h  joint_state_controller.h  lyapunov_pendulum_damping_controller.h
crane_controllers/launch/: crane_nmpc_nodelet.launch
crane_controllers/notebooks/: casadi-dynamics.ipynb  mpc-sim.ipynb
crane_controllers/scripts/: run_nmpc_simulated.py  run_trajectory.py
crane_controllers/src/: crane_controller.cpp  crane_nmpc_nodelet.cpp  crane_state_controller.cpp  crane_tip_velocity_controller.cpp  crane_tip_velocity_forward_controller.cpp  crane_tip_velocity_rml_controller.cpp  joint_state_controller.cpp  lyapunov_pendulum_damping_controller.cpp
crane_controllers/src/nmpc_position_controller/: control.py  dynamics.py  input.py
crane_controllers/test/: test_follow_crane_trajectory
crane_description/: CMakeLists.txt  package.xml
crane_description/config/: crane_visualization.rviz  pendulum_visualization.rviz
crane_description/launch/: load_crane.launch  load_crane_with_pendulum.launch  load_pendulum.launch  test_crane.launch  test_crane_with_pendulum.launch  test_pendulum.launch
crane_description/meshes/visual/: Boom1.stl  Boom2.stl  Cyl1.stl  Cyl2.stl  Cylind11.stl  King.stl  Piston1.stl  Piston2.stl  Sheavebracket3.stl  SlewB.stl
crane_description/urdf/: crane.urdf.xacro  crane.xacro  crane_with_pendulum.urdf.xacro  pendulum.urdf.xacro  pendulum.xacro
crane_estimation/: package.xml
crane_hw_interface/: CMakeLists.txt  package.xml
crane_hw_interface/config/: controller_joint_names.yaml  hardware_controllers.yaml
crane_hw_interface/include/crane_hw_interface/: crane_hw_interface.h  crane_hw_interface_sim.h  crane_tip_state_interface.h  crane_tip_velocity_command_interface.h
crane_hw_interface/include/mlpiCoreClient/: mlpiAccessControlLib.h  mlpiGlobal.h  mlpiIoLib.h  mlpiLogicLib.h  mlpiSystemLib.h  mlpiVersion.h  mlpiWatchdogLib.h
crane_hw_interface/include/mlpiCoreClient/helper/: mlpiIoHelper.h  mlpiMotionHelper.h
crane_hw_interface/launch/: crane_hw_interface.launch
crane_hw_interface/src/: crane_hw_interface.cpp  crane_hw_interface_node.cpp  crane_hw_interface_node_sim.cpp  crane_hw_interface_sim.cpp
crane_kinematics/: CMakeLists.txt  package.xml
crane_kinematics/scripts/: Kinematics.m  Rx.m  Rxd.m  Ry.m  Ryd.m  Rz.m  Rzd.m  sks.m
crane_msgs/: CMakeLists.txt  package.xml
crane_msgs/action/: FollowCraneTrajectory.action
crane_msgs/msg/: CraneControl.msg  CranePendulumImagePoints.msg  CraneState.msg  CraneTrajectory.msg  CraneTrajectoryPoint.msg
crane_pendulum_dynamics/: CMakeLists.txt  package.xml  setup.py
crane_pendulum_dynamics/launch/: crane_pendulum_dynamics.launch
crane_pendulum_dynamics/scripts/: simple_pendulum.py  spherical_pendulum_visualization
crane_pendulum_dynamics/simulink/: PenulumAcceleration.slx  PenulumAccelerationInput.slx
crane_pendulum_dynamics/src/crane_pendulum_dynamics/: rk4.py  spherical_pendulum.py
crane_state_publisher/: CMakeLists.txt  package.xml
crane_state_publisher/nodes/: crane_state_publisher
crane_vision/: CMakeLists.txt  crane_vision_nodelet.xml  package.xml  setup.py
crane_vision/launch/: camera_array.launch  crane_vision_nodelet.launch
crane_vision/nodes/: Vision_with_EKF.py  camera_node  crane_vision_node  crane_vision_sync_cameras
crane_vision/scripts/: Vision_with_EKF.py
crane_vision/src/: crane_vision_ekf.cpp  crane_vision_nodelet.cpp  opencv_example_node.cpp
crane_vision/src/crane_vision/: camera.py  ekf.py  transformations.py  vision.py
