<?xml version="1.0"?>
<package format="2">
  <name>crane</name>
  <version>0.0.1</version>
  <description>Meta package for crane control at MTP, NTNU</description>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/tingelst/crane</url>
  <url type="bugtracker">https://github.com/tingelst/crane/issues</url>
  <author>Lars Tingelstad</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage />
  </export>
</package>