<?xml version="1.0"?>
<package format="2">
  <name>crane_estimation</name>
  <version>0.0.1</version>
  <description>crane_estimation</description>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/tingelst/crane</url>
  <url type="bugtracker">https://github.com/tingelst/crane/issues</url>
  <author>Lars Tingelstad</author>
  <author>Geir O. Tysse</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>