<?xml version="1.0"?>
<package format="2">
  <name>crane_pendulum_dynamics</name>
  <version>0.0.1</version>
  <description>crane_pendulum_dynamics</description>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/tingelst/crane</url>
  <url type="bugtracker">https://github.com/tingelst/crane/issues</url>
  <author>Lars Tingelstad</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>