<?xml version="1.0"?>
<package format="2">
  <name>crane_vision</name>
  <version>0.0.1</version>
  <description>crane_vision</description>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>MIT</license>

  <url type="repository">https://github.com/tingelst/crane</url>
  <url type="bugtracker">https://github.com/tingelst/crane/issues</url>
  <author>Lars Tingelstad</author>
  <author>Geir O. Tysse</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python-catkin-pkg</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>nodelet</depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>crane_msgs</depend>

  <exec_depend>python-numpy</exec_depend>
  <exec_depend>python-scipy</exec_depend>
  <exec_depend>python-opencv</exec_depend>
  <exec_depend>python-scipy</exec_depend>

  <export>
    <nodelet plugin="${prefix}/crane_vision_nodelet.xml"/>
  </export>
</package>
